src/objects/Feeder__c.object
<CustomObject>
    <description>Feeder Object is associated with Projects through the junction object FeederProjectAssociation.

If a new Feeder Utility and Voltage needs to be added:

1) Edit the &apos;Field Feeder Utility and Voltage&apos; to include the new utility and voltage in the picklist

2) Edit the field &apos;Assumed Remaining Capacity&apos; by editing the formula and adding an additional line for the &apos;if&apos; scenario related to the new utility and voltage that was added in step one, and enter an assumed total distributed generation capacity for that specific utility and voltage line in kW</description>
    <fields>
        <fullName>Assumed_Remaining_Capacity_per_DOER_DG__c</fullName>
        <formula>IF( ISNULL(  Date_of_DG_Database__c ) , null, (Feeder_Rating_2016_MVA__c*1000) -  (DG_Database_Applied_kW__c +  DG_Database_Interconnected_kW__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assumed Remaining Capacity per DOER DG</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assumed_Remaining_Capacity_per_NGrid_DG__c</fullName>
        <formula>IF( ISNULL( NGrid_DG_Database_Date__c ) , null, (Feeder_Rating_2016_MVA__c *1000)- (NGrid_DG_Database_Applied_kW__c + NGrid_DG_Database_Interconnected_kW__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assumed Remaining Capacity per NGrid DG</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circuit_Sub_Transformer_ID__c</fullName>
        <label>Circuit Sub Transformer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DG_Database_Applied_kW__c</fullName>
        <label>DOER DG Database Applied kW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DG_Database_Interconnected_kW__c</fullName>
        <label>DOER DG Database Interconnected kW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_DG_Database__c</fullName>
        <label>DOER DG Database Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Most_Recent_Preapp__c</fullName>
        <label>Date of Most Recent Preapp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dynamic_Remaining_Capacity__c</fullName>
        <formula>(If(OR(ISBLANK( Feeder_Rating_2016_MVA__c),ISBLANK( Date_of_Most_Recent_Preapp__c )),
    0, (Feeder_Rating_2016_MVA__c *1000))

    -( kw_Applied__c + Interconnected_kW_AC__c )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre App Assumed Remaining Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feeder_Rating_2016_MVA__c</fullName>
        <label>Latest Feeder Rating (MVA)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feeder_Utility_and_Voltage__c</fullName>
        <label>Feeder Utility and Voltage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Utility/Voltage Not Specified</fullName>
                    <default>true</default>
                    <label>Utility/Voltage Not Specified</label>
                </value>
                <value>
                    <fullName>Eversource 4 kV</fullName>
                </value>
                <value>
                    <fullName>Eversource 13 kV</fullName>
                </value>
                <value>
                    <fullName>Eversource 23 kV</fullName>
                </value>
                <value>
                    <fullName>National Grid 4 kV</fullName>
                </value>
                <value>
                    <fullName>National Grid 13 kV</fullName>
                </value>
                <value>
                    <fullName>National Grid 23 kV</fullName>
                </value>
                <value>
                    <fullName>WMECO 13 kV</fullName>
                </value>
                <value>
                    <fullName>WMECO 23 kV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interconnected_kW_AC__c</fullName>
        <label>Interconnected (kW AC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NGrid_DG_Database_Applied_kW__c</fullName>
        <label>NGrid DG Database Applied kW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NGrid_DG_Database_Date__c</fullName>
        <label>NGrid DG Database Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NGrid_DG_Database_Interconnected_kW__c</fullName>
        <label>NGrid DG Database Interconnected kW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated - use FeederProjectAssociation. AB aiming to associate a Project with a Feeder via the Project Name lookup field</description>
        <label>xxxProject</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Feeders</relationshipLabel>
        <relationshipName>Feeders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Substation__c</fullName>
        <description>This is the substation to which the feeder is connected</description>
        <label>Substation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Feeder_Name__c</fullName>
        <label>Unique Feeder Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>kw_Applied__c</fullName>
        <label>Applied (kW AC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Feeder</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Feeder_Utility_and_Voltage__c</columns>
        <columns>kw_Applied__c</columns>
        <columns>Interconnected_kW_AC__c</columns>
        <columns>Dynamic_Remaining_Capacity__c</columns>
        <columns>Date_of_Most_Recent_Preapp__c</columns>
        <columns>Substation__c</columns>
        <columns>Circuit_Sub_Transformer_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Projects_and_Feeders</fullName>
        <columns>Project__c</columns>
        <columns>Date_of_Most_Recent_Preapp__c</columns>
        <columns>NAME</columns>
        <columns>Dynamic_Remaining_Capacity__c</columns>
        <columns>Interconnected_kW_AC__c</columns>
        <columns>kw_Applied__c</columns>
        <columns>Feeder_Utility_and_Voltage__c</columns>
        <columns>Substation__c</columns>
        <columns>Circuit_Sub_Transformer_ID__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Projects and Feeders</label>
    </listViews>
    <nameField>
        <label>Feeder Designation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feeders</pluralLabel>
    <recordTypes>
        <fullName>Feeder</fullName>
        <active>true</active>
        <label>Feeder</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>